rhdlc/test/compile-fail/no-module-multiple/top.rhdl
mod a;
mod b;
mod c;
mod d {}
mod e;